deployments/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
  - protocol: "TCP"
    port: 6000
    targetPort: 5000
  type: ClusterIp
